JDownloader/k8s/deploy.yml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: jdownloader-env
# data:
#   PUID: "1000"
#   PGID: "1000"
#   TZ: "Asia/Tokyo"
#   # TZ: "Europe/London"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jdownloader
spec:
  selector:
    matchLabels:
      app: jdownloader
  template:
    metadata:
      labels:
        app: jdownloader
      annotations:
        podinfo: "jdownloader:Downloader"
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: kubernetes.io/os
                  operator: In
                  values:
                    - linux
                - key: kubernetes.io/arch
                  operator: In
                  values:
                    - arm64
      containers:
        - name: jdownloader
          image: jlesage/jdownloader-2:v23.06.1
          imagePullPolicy: IfNotPresent
          # envFrom:
          # - configMapRef:
          #     name: jdownloader-env
          ports:
            - containerPort: 5800
          volumeMounts:
            - name: config
              mountPath: /config
            - name: output
              mountPath: /output
              # readOnly: true
          # resources:
          #   limits:
          #     cpu: 2.5
          #     memory: 5Gi
          #   requests:
          #     cpu: 1
          #     memory: 2.5Gi
          # securityContext:
          #   privileged: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jdownloader-pvc-config 
        - name: output
          persistentVolumeClaim:
            claimName: jdownloader-pvc-output 
---
apiVersion: v1
kind: Service
metadata:
  name: jdownloader
spec:
  selector:
    app: jdownloader
  ports:
    - name: jdownloader
      port: 5800
      targetPort: 5800
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jdownloader
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: jdownloader.bookserver.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jdownloader
            port:
              number: 5800
